namespace ReservationService.Domain;

public enum SurfaceType
{
    Hard,
    Clay,
    Grass,
    Carpet
}